# syna_webds

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
connection/: package.json
connection-settings/: .gitignore  package.json
erase-and-program/: MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
erase-and-program/jupyter-config/nb-config/: webds_erase_and_program.json
erase-and-program/jupyter-config/server-config/: webds_erase_and_program.json
erase-and-program/schema/: plugin.json
erase-and-program/src/: filelist.tsx  handler.ts  index.ts  program.tsx  upload.tsx  widget.tsx
erase-and-program/src/packrat/: Packrat.js  Packrat_Client.js  packrat.js  packrat_types.js  thrift.js
erase_and_program/: __init__.py  handlers.py  setup.py
image-heatmap/: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
image-heatmap/.github/workflows/: build.yml  check-release.yml
image-heatmap/schema/: plugin.json
image-heatmap/src/: handler.ts  icons.ts  index.ts  typings.d.ts  widget.tsx
image-heatmap/style/: base.css
reprogram/: .gitignore  .prettierignore  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
server-extension/: MANIFEST.in  README.md  package-lock.json  package.json  setup.py
src/: button.ts  button_ui.tsx  context.tsx  filelist.tsx  handler.ts  icons.ts  index.ts  mytest.tsx  program.ts  program.tsx  program_progress.tsx  tabpanel.tsx  upload.ts  upload.tsx  upload_progress.tsx  upload_ui.tsx  widget.tsx
style/: base.css
unit-test/: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
unit_test/: .gitignore  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  (+1 more)
(+71 files in other folders)
